<resources>
    <string name="app_name">Калькулятор</string>
    <string name="StrCalc">Строчный калькулятор</string>
    <string name="Answ">Ответ</string>
    <string name="n1">Number1</string>
    <string name="n2">Number2</string>
    <string name="nul">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="fact">Factorial N1</string>
    <string name="simple">SimN1</string>
    <string name="mem">Mem</string>
    <string name="memPlus">+Mem</string>
</resources>
